force-app/main/default/staticresources/python/Disappear/src/objects/KeyValueSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <label>KeyValueSettings</label>
</CustomObject>